Added About creator in about window
Added About creator in about window

--- a/src/main/resources/assets/css/style_about.css
+++ b/src/main/resources/assets/css/style_about.css
@@ -1,4 +1,8 @@
 
+.text-center {
+    -fx-text-alignment: center;
+}
+
 .about-name {
     -fx-font-weight: 700;
 }
@@ -14,5 +18,4 @@
 
 .about-warranty {
     -fx-padding: 10px 0 0 7px;
-    -fx-text-alignment: center;
 }
