--- a/src/main/resources/assets/styles/dark/global.css
+++ b/src/main/resources/assets/styles/dark/global.css
@@ -2,7 +2,7 @@
     -fx-background-color: #1a1a1b;
 }
 
-.text, .choice-box .label {
+.text, .choice-box .label, .list-cell {
     -fx-text-fill: #f6f6f6;
 }
 
@@ -79,4 +79,16 @@
 
 .button-option:hover {
    -fx-background-color: #353535;
+}
+
+.scroll-pane-properties, .grid-properties {
+    -fx-background-color: #252525;
+}
+
+.scroll-pane .scroll-bar:vertical .thumb {
+    -fx-background-color: #515050;
+}
+
+.list-view {
+    -fx-background-color: #515151;
 }
