--- a/src/main/resources/assets/styles/structural/global.css
+++ b/src/main/resources/assets/styles/structural/global.css
@@ -1,3 +1,7 @@
+.transparent {
+    -fx-background-color: trasnapent;
+}
+
 .back-button {
     -fx-background-color: transparent;
     -fx-cursor: hand;
@@ -114,4 +118,20 @@
     -fx-padding: 2 0 2 0;
     -fx-text-decoration: underline;
     -fx-cursor: hand;
+}
+
+.scroll-pane .scroll-bar:vertical {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane .scroll-bar:vertical .thumb {
+    -fx-background-radius: 5px;
+}
+
+.list-view {
+    -fx-padding: 2px;
+}
+
+.list-cell {
+    -fx-background-color: transparent;
 }
