Added information about empty folder if current directory is empty in files pane
Added information about empty folder if current directory is empty in files pane

--- a/src/main/resources/assets/styles/structural/main.css
+++ b/src/main/resources/assets/styles/structural/main.css
@@ -40,3 +40,8 @@
     -fx-padding: 3px 4px 5px 4px;
     -fx-border-radius: 50%;
 }
+
+.hidden-files .box {
+    -fx-background-color: transparent;
+    -fx-padding: 2px 2px 2px 8px;
+}
